--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
+  
+  <link rel="manifest" href="manifest.json" />
+
   <meta charset="UTF-8">
   <title>محاسبه GFR</title>
   <style>
