--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="manifest" href="manifest.json" />
 
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>محاسبه GFR</title>
   <style>
     body {
@@ -104,7 +105,7 @@
 
 <body>
 
-  <h2>انتخاب فرمول محاسبه GFR:</h2>
+  <h2> فرمول محاسبه GFR:</h2>
 
   <div class="tab">
     <button onclick="selectFormula('mdrd')" id="btn-mdrd">MDRD</button>
