--- a/index.html
+++ b/index.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-  
-  <link rel="manifest" href="manifest.json" />
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>محاسبه GFR</title>
-  <style>
-    body {
-      background-color: #000;
-      color: #FFD700;
-      font-family: "BMitra", sans-serif;
-      direction: rtl;
-      padding: 20px;
-    }
+  <link rel="manifest" href="manifest.json" />
 
+  <style>
     @font-face {
       font-family: 'BMitra';
       src: url('BMitra.ttf') format('truetype');
     }
 
+    body {
+      background-color: #000;
+      color: #FFD700;
+      font-family: "BMitra", sans-serif;
+      direction: rtl;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 600px;
+      margin: auto;
+      padding: 20px;
+    }
+
+    h2 {
+      text-align: center;
+      font-size: 1.5em;
+    }
+
     .tab {
       display: flex;
-      gap: 10px;
-      margin-bottom: 20px;
       flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      margin: 20px 0;
     }
 
     .tab button {
@@ -35,6 +47,7 @@
       border: none;
       cursor: pointer;
       border-radius: 10px;
+      font-size: 1em;
     }
 
     .tab button.active {
@@ -43,13 +56,13 @@
     }
 
     .description {
-      margin-top: 10px;
+      text-align: center;
       font-size: 1.1em;
+      margin-bottom: 20px;
     }
 
     .form-section {
       display: none;
-      margin-top: 20px;
       border-top: 1px solid #FFD700;
       padding-top: 15px;
     }
@@ -60,23 +73,31 @@
 
     label {
       display: block;
-      margin-top: 10px;
+      margin-top: 15px;
+      font-size: 1em;
     }
 
     input, select {
-      padding: 5px;
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
       font-size: 1em;
-      width: 200px;
+      border-radius: 5px;
+      border: 1px solid #FFD700;
+      background-color: #111;
+      color: #FFD700;
     }
 
     button.calc {
-      margin-top: 15px;
-      padding: 10px 20px;
+      width: 100%;
+      padding: 12px;
+      margin-top: 20px;
       background: #FFD700;
       color: #000;
       border: none;
       border-radius: 10px;
       font-weight: bold;
+      font-size: 1.1em;
       cursor: pointer;
     }
 
@@ -86,6 +107,7 @@
       font-weight: bold;
       padding: 10px;
       border-radius: 10px;
+      text-align: center;
     }
 
     .stage-1 { background-color: #4caf50; color: white; }
@@ -95,78 +117,79 @@
     .stage-5 { background-color: #f44336; color: white; }
   </style>
 </head>
-  <script>
-  if ("serviceWorker" in navigator) {
-    navigator.serviceWorker.register("service-worker.js")
-      .then(() => console.log("Service Worker Registered"))
-      .catch(err => console.error("SW registration failed:", err));
-  }
-</script>
-
 <body>
+  <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("service-worker.js")
+        .then(() => console.log("Service Worker Registered"))
+        .catch(err => console.error("SW registration failed:", err));
+    }
+  </script>
 
-  <h2> فرمول محاسبه GFR:</h2>
+  <div class="container">
+    <h2>فرمول محاسبه GFR:</h2>
 
-  <div class="tab">
-    <button onclick="selectFormula('mdrd')" id="btn-mdrd">MDRD</button>
-    <button onclick="selectFormula('ckd')" id="btn-ckd">CKD-EPI</button>
-    <button onclick="selectFormula('cg')" id="btn-cg">Cockcroft-Gault</button>
-    <button onclick="selectFormula('schwartz')" id="btn-schwartz">Schwartz</button>
+    <div class="tab">
+      <button onclick="selectFormula('mdrd')" id="btn-mdrd">MDRD</button>
+      <button onclick="selectFormula('ckd')" id="btn-ckd">CKD-EPI</button>
+      <button onclick="selectFormula('cg')" id="btn-cg">Cockcroft-Gault</button>
+      <button onclick="selectFormula('schwartz')" id="btn-schwartz">Schwartz</button>
+    </div>
+
+    <div class="description" id="desc"></div>
+
+    <!-- MDRD -->
+    <div id="form-mdrd" class="form-section">
+      <label>سن (سال):</label><input type="number" id="mdrd-age">
+      <label>جنسیت:</label>
+      <select id="mdrd-gender">
+        <option value="male">مرد</option>
+        <option value="female">زن</option>
+      </select>
+      <label>کراتینین سرم (mg/dL):</label><input type="number" step="0.01" id="mdrd-creatinine">
+      <button class="calc" onclick="calcMDRD()">محاسبه</button>
+    </div>
+
+    <!-- CKD-EPI -->
+    <div id="form-ckd" class="form-section">
+      <label>سن (سال):</label><input type="number" id="ckd-age">
+      <label>جنسیت:</label>
+      <select id="ckd-gender">
+        <option value="male">مرد</option>
+        <option value="female">زن</option>
+      </select>
+      <label>کراتینین سرم (mg/dL):</label><input type="number" step="0.01" id="ckd-creatinine">
+      <button class="calc" onclick="calcCKD()">محاسبه</button>
+    </div>
+
+    <!-- Cockcroft-Gault -->
+    <div id="form-cg" class="form-section">
+      <label>سن (سال):</label><input type="number" id="cg-age">
+      <label>وزن (کیلوگرم):</label><input type="number" id="cg-weight">
+      <label>جنسیت:</label>
+      <select id="cg-gender">
+        <option value="male">مرد</option>
+        <option value="female">زن</option>
+      </select>
+      <label>کراتینین سرم (mg/dL):</label><input type="number" step="0.01" id="cg-creatinine">
+      <button class="calc" onclick="calcCG()">محاسبه</button>
+    </div>
+
+    <!-- Schwartz -->
+    <div id="form-schwartz" class="form-section">
+      <label>سن (سال):</label><input type="number" id="schwartz-age">
+      <label>قد (سانتی‌متر):</label><input type="number" id="schwartz-height">
+      <label>کراتینین سرم (mg/dL):</label><input type="number" step="0.01" id="schwartz-creatinine">
+      <button class="calc" onclick="calcSchwartz()">محاسبه</button>
+    </div>
+
+    <div class="result" id="result" style="display:none;"></div>
   </div>
-
-  <div class="description" id="desc"></div>
-
-  <!-- MDRD -->
-  <div id="form-mdrd" class="form-section">
-    <label>سن (سال):</label><input type="number" id="mdrd-age">
-    <label>جنسیت:</label>
-    <select id="mdrd-gender">
-      <option value="male">مرد</option>
-      <option value="female">زن</option>
-    </select>
-    <label>کراتینین سرم (mg/dL):</label><input type="number" step="0.01" id="mdrd-creatinine">
-    <button class="calc" onclick="calcMDRD()">محاسبه</button>
-  </div>
-
-  <!-- CKD-EPI -->
-  <div id="form-ckd" class="form-section">
-    <label>سن (سال):</label><input type="number" id="ckd-age">
-    <label>جنسیت:</label>
-    <select id="ckd-gender">
-      <option value="male">مرد</option>
-      <option value="female">زن</option>
-    </select>
-    <label>کراتینین سرم (mg/dL):</label><input type="number" step="0.01" id="ckd-creatinine">
-    <button class="calc" onclick="calcCKD()">محاسبه</button>
-  </div>
-
-  <!-- Cockcroft-Gault -->
-  <div id="form-cg" class="form-section">
-    <label>سن (سال):</label><input type="number" id="cg-age">
-    <label>وزن (کیلوگرم):</label><input type="number" id="cg-weight">
-    <label>جنسیت:</label>
-    <select id="cg-gender">
-      <option value="male">مرد</option>
-      <option value="female">زن</option>
-    </select>
-    <label>کراتینین سرم (mg/dL):</label><input type="number" step="0.01" id="cg-creatinine">
-    <button class="calc" onclick="calcCG()">محاسبه</button>
-  </div>
-
-  <!-- Schwartz -->
-  <div id="form-schwartz" class="form-section">
-    <label>سن (سال):</label><input type="number" id="schwartz-age">
-    <label>قد (سانتی‌متر):</label><input type="number" id="schwartz-height">
-    <label>کراتینین سرم (mg/dL):</label><input type="number" step="0.01" id="schwartz-creatinine">
-    <button class="calc" onclick="calcSchwartz()">محاسبه</button>
-  </div>
-
-  <div class="result" id="result" style="display:none;"></div>
 
   <script>
     const descriptions = {
       mdrd: "MDRD: این فرمول برای بیماران کلیوی مزمن (CKD) می‌باشد.",
-      ckd: "CKD-EP: فرمول با دقت بالا و بدون نیاز به فاکتور وزن بیمار.",
+      ckd: "CKD-EPI: فرمول با دقت بالا و بدون نیاز به فاکتور وزن بیمار.",
       cg: "Cockcroft-Gault: فرمول با نیاز به دانستن وزن و محاسبات آسان.",
       schwartz: "Schwartz: فرمول مورد استفاده برای کودکان با در نظرگیری قد."
     };
@@ -205,15 +228,12 @@
       const gender = document.getElementById("ckd-gender").value;
       const cr = parseFloat(document.getElementById("ckd-creatinine").value);
       if (isNaN(age) || isNaN(cr)) return;
-
       const k = gender === "female" ? 0.7 : 0.9;
       const alpha = gender === "female" ? -0.241 : -0.302;
       const minVal = Math.min(cr / k, 1);
       const maxVal = Math.max(cr / k, 1);
-
       let gfr = 142 * Math.pow(minVal, alpha) * Math.pow(maxVal, -1.200) * Math.pow(0.9938, age);
       if (gender === "female") gfr *= 1.012;
-
       showGFR(gfr);
     }
 
@@ -223,10 +243,8 @@
       const gender = document.getElementById("cg-gender").value;
       const cr = parseFloat(document.getElementById("cg-creatinine").value);
       if (isNaN(age) || isNaN(weight) || isNaN(cr)) return;
-
       let gfr = ((140 - age) * weight) / (72 * cr);
       if (gender === "female") gfr *= 0.85;
-
       showGFR(gfr);
     }
 
@@ -234,13 +252,273 @@
       const height = parseFloat(document.getElementById("schwartz-height").value);
       const cr = parseFloat(document.getElementById("schwartz-creatinine").value);
       if (isNaN(height) || isNaN(cr)) return;
-
       let gfr = (0.413 * height) / cr;
       showGFR(gfr);
     }
 
     window.onload = () => selectFormula('ckd');
   </script>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="fa">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>محاسبه GFR</title>
+  <link rel="manifest" href="manifest.json" />
 
+  <style>
+    @font-face {
+      font-family: 'BMitra';
+      src: url('BMitra.ttf') format('truetype');
+    }
+
+    body {
+      background-color: #000;
+      color: #FFD700;
+      font-family: "BMitra", sans-serif;
+      direction: rtl;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 600px;
+      margin: auto;
+      padding: 20px;
+    }
+
+    h2 {
+      text-align: center;
+      font-size: 1.5em;
+    }
+
+    .tab {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      margin: 20px 0;
+    }
+
+    .tab button {
+      background-color: #222;
+      color: #FFD700;
+      padding: 10px 20px;
+      border: none;
+      cursor: pointer;
+      border-radius: 10px;
+      font-size: 1em;
+    }
+
+    .tab button.active {
+      background-color: #FFD700;
+      color: #000;
+    }
+
+    .description {
+      text-align: center;
+      font-size: 1.1em;
+      margin-bottom: 20px;
+    }
+
+    .form-section {
+      display: none;
+      border-top: 1px solid #FFD700;
+      padding-top: 15px;
+    }
+
+    .form-section.active {
+      display: block;
+    }
+
+    label {
+      display: block;
+      margin-top: 15px;
+      font-size: 1em;
+    }
+
+    input, select {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      font-size: 1em;
+      border-radius: 5px;
+      border: 1px solid #FFD700;
+      background-color: #111;
+      color: #FFD700;
+    }
+
+    button.calc {
+      width: 100%;
+      padding: 12px;
+      margin-top: 20px;
+      background: #FFD700;
+      color: #000;
+      border: none;
+      border-radius: 10px;
+      font-weight: bold;
+      font-size: 1.1em;
+      cursor: pointer;
+    }
+
+    .result {
+      margin-top: 20px;
+      font-size: 1.4em;
+      font-weight: bold;
+      padding: 10px;
+      border-radius: 10px;
+      text-align: center;
+    }
+
+    .stage-1 { background-color: #4caf50; color: white; }
+    .stage-2 { background-color: #8bc34a; color: black; }
+    .stage-3 { background-color: #ffeb3b; color: black; }
+    .stage-4 { background-color: #ff9800; color: black; }
+    .stage-5 { background-color: #f44336; color: white; }
+  </style>
+</head>
+<body>
+  <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("service-worker.js")
+        .then(() => console.log("Service Worker Registered"))
+        .catch(err => console.error("SW registration failed:", err));
+    }
+  </script>
+
+  <div class="container">
+    <h2>فرمول محاسبه GFR:</h2>
+
+    <div class="tab">
+      <button onclick="selectFormula('mdrd')" id="btn-mdrd">MDRD</button>
+      <button onclick="selectFormula('ckd')" id="btn-ckd">CKD-EPI</button>
+      <button onclick="selectFormula('cg')" id="btn-cg">Cockcroft-Gault</button>
+      <button onclick="selectFormula('schwartz')" id="btn-schwartz">Schwartz</button>
+    </div>
+
+    <div class="description" id="desc"></div>
+
+    <!-- MDRD -->
+    <div id="form-mdrd" class="form-section">
+      <label>سن (سال):</label><input type="number" id="mdrd-age">
+      <label>جنسیت:</label>
+      <select id="mdrd-gender">
+        <option value="male">مرد</option>
+        <option value="female">زن</option>
+      </select>
+      <label>کراتینین سرم (mg/dL):</label><input type="number" step="0.01" id="mdrd-creatinine">
+      <button class="calc" onclick="calcMDRD()">محاسبه</button>
+    </div>
+
+    <!-- CKD-EPI -->
+    <div id="form-ckd" class="form-section">
+      <label>سن (سال):</label><input type="number" id="ckd-age">
+      <label>جنسیت:</label>
+      <select id="ckd-gender">
+        <option value="male">مرد</option>
+        <option value="female">زن</option>
+      </select>
+      <label>کراتینین سرم (mg/dL):</label><input type="number" step="0.01" id="ckd-creatinine">
+      <button class="calc" onclick="calcCKD()">محاسبه</button>
+    </div>
+
+    <!-- Cockcroft-Gault -->
+    <div id="form-cg" class="form-section">
+      <label>سن (سال):</label><input type="number" id="cg-age">
+      <label>وزن (کیلوگرم):</label><input type="number" id="cg-weight">
+      <label>جنسیت:</label>
+      <select id="cg-gender">
+        <option value="male">مرد</option>
+        <option value="female">زن</option>
+      </select>
+      <label>کراتینین سرم (mg/dL):</label><input type="number" step="0.01" id="cg-creatinine">
+      <button class="calc" onclick="calcCG()">محاسبه</button>
+    </div>
+
+    <!-- Schwartz -->
+    <div id="form-schwartz" class="form-section">
+      <label>سن (سال):</label><input type="number" id="schwartz-age">
+      <label>قد (سانتی‌متر):</label><input type="number" id="schwartz-height">
+      <label>کراتینین سرم (mg/dL):</label><input type="number" step="0.01" id="schwartz-creatinine">
+      <button class="calc" onclick="calcSchwartz()">محاسبه</button>
+    </div>
+
+    <div class="result" id="result" style="display:none;"></div>
+  </div>
+
+  <script>
+    const descriptions = {
+      mdrd: "MDRD: این فرمول برای بیماران کلیوی مزمن (CKD) می‌باشد.",
+      ckd: "CKD-EPI: فرمول با دقت بالا و بدون نیاز به فاکتور وزن بیمار.",
+      cg: "Cockcroft-Gault: فرمول با نیاز به دانستن وزن و محاسبات آسان.",
+      schwartz: "Schwartz: فرمول مورد استفاده برای کودکان با در نظرگیری قد."
+    };
+
+    function selectFormula(formula) {
+      document.querySelectorAll(".tab button").forEach(btn => btn.classList.remove("active"));
+      document.getElementById(`btn-${formula}`).classList.add("active");
+      document.getElementById("desc").innerText = descriptions[formula];
+      document.querySelectorAll(".form-section").forEach(section => section.classList.remove("active"));
+      document.getElementById(`form-${formula}`).classList.add("active");
+      document.getElementById("result").style.display = "none";
+    }
+
+    function showGFR(gfr) {
+      const stage = gfr >= 90 ? 1 : gfr >= 60 ? 2 : gfr >= 30 ? 3 : gfr >= 15 ? 4 : 5;
+      const stageClass = `stage-${stage}`;
+      const stageText = ["مرحله 5 (نارسایی)", "مرحله 4", "مرحله 3", "مرحله 2", "مرحله 1"][5 - stage];
+      const resDiv = document.getElementById("result");
+      resDiv.className = `result ${stageClass}`;
+      resDiv.style.display = "block";
+      resDiv.innerHTML = `<span style="font-size: 1.8em;">GFR = ${gfr.toFixed(1)}</span> <span style="font-size: 1em;">ml/min/1.73m²</span><br>${stageText}`;
+    }
+
+    function calcMDRD() {
+      const age = parseFloat(document.getElementById("mdrd-age").value);
+      const gender = document.getElementById("mdrd-gender").value;
+      const cr = parseFloat(document.getElementById("mdrd-creatinine").value);
+      if (isNaN(age) || isNaN(cr)) return;
+      let gfr = 175 * Math.pow(cr, -1.154) * Math.pow(age, -0.203);
+      if (gender === "female") gfr *= 0.742;
+      showGFR(gfr);
+    }
+
+    function calcCKD() {
+      const age = parseFloat(document.getElementById("ckd-age").value);
+      const gender = document.getElementById("ckd-gender").value;
+      const cr = parseFloat(document.getElementById("ckd-creatinine").value);
+      if (isNaN(age) || isNaN(cr)) return;
+      const k = gender === "female" ? 0.7 : 0.9;
+      const alpha = gender === "female" ? -0.241 : -0.302;
+      const minVal = Math.min(cr / k, 1);
+      const maxVal = Math.max(cr / k, 1);
+      let gfr = 142 * Math.pow(minVal, alpha) * Math.pow(maxVal, -1.200) * Math.pow(0.9938, age);
+      if (gender === "female") gfr *= 1.012;
+      showGFR(gfr);
+    }
+
+    function calcCG() {
+      const age = parseFloat(document.getElementById("cg-age").value);
+      const weight = parseFloat(document.getElementById("cg-weight").value);
+      const gender = document.getElementById("cg-gender").value;
+      const cr = parseFloat(document.getElementById("cg-creatinine").value);
+      if (isNaN(age) || isNaN(weight) || isNaN(cr)) return;
+      let gfr = ((140 - age) * weight) / (72 * cr);
+      if (gender === "female") gfr *= 0.85;
+      showGFR(gfr);
+    }
+
+    function calcSchwartz() {
+      const height = parseFloat(document.getElementById("schwartz-height").value);
+      const cr = parseFloat(document.getElementById("schwartz-creatinine").value);
+      if (isNaN(height) || isNaN(cr)) return;
+      let gfr = (0.413 * height) / cr;
+      showGFR(gfr);
+    }
+
+    window.onload = () => selectFormula('ckd');
+  </script>
 </body>
 </html>
