--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
   <link rel="manifest" href="manifest.json" />
 
   <style>
+    html {
+  font-size: 20px;
+}
+
+body {
+  font-size: 1rem;
+}
+
+h1, h2, h3, h4, h5, h6, p, span, div, label, input, button {
+  font-size: 1.1em;
+}
+@media (max-width: 600px) {
+  html {
+    font-size: 18px;
+  }
+}
+
+@media (min-width: 601px) {
+  html {
+    font-size: 22px;
+  }
+}
+
     @font-face {
       font-family: 'BMitra';
       src: url('BMitra.ttf') format('truetype');
