--- a/index.html
+++ b/index.html
@@ -226,15 +226,44 @@ h1, h2, h3, h4, h5, h6, p, span, div, label, input, button {
       document.getElementById("result").style.display = "none";
     }
 
-    function showGFR(gfr) {
-      const stage = gfr >= 90 ? 1 : gfr >= 60 ? 2 : gfr >= 30 ? 3 : gfr >= 15 ? 4 : 5;
-      const stageClass = `stage-${stage}`;
-      const stageText = ["مرحله 5 (نارسایی)", "مرحله 4", "مرحله 3", "مرحله 2", "مرحله 1"][5 - stage];
-      const resDiv = document.getElementById("result");
-      resDiv.className = `result ${stageClass}`;
-      resDiv.style.display = "block";
-      resDiv.innerHTML = `<span style="font-size: 1.8em;">GFR = ${gfr.toFixed(1)}</span> <span style="font-size: 1em;">ml/min/1.73m²</span><br>${stageText}`;
-    }
+function showGFR(gfr) {
+  const stage = gfr >= 90 ? 1 :
+                gfr >= 60 ? 2 :
+                gfr >= 30 ? 3 :
+                gfr >= 15 ? 4 : 5;
+
+  const stageClass = `stage-${stage}`;
+
+  const stageTitles = [
+    "مرحله 5",
+    "مرحله 4",
+    "مرحله 3",
+    "مرحله 2",
+    "مرحله 1"
+  ];
+
+  const stageDescriptions = [
+    "نارسایی کلیه",
+    "افت شدید عملکرد کلیه",
+    "افت متوسط عملکرد کلیه",
+    "افت خفیف عملکرد کلیه",
+    "عملکرد طبیعی کلیه"
+  ];
+
+  const title = stageTitles[5 - stage];
+  const description = stageDescriptions[5 - stage];
+
+  const resDiv = document.getElementById("result");
+  resDiv.className = `result ${stageClass}`;
+  resDiv.style.display = "block";
+  resDiv.innerHTML = `
+    <span style="font-size: 1.8em;">GFR = ${gfr.toFixed(1)}</span>
+    <span style="font-size: 1em;">ml/min/1.73m²</span><br>
+    <span style="font-size: 1.5em;">${title}</span><br>
+    <span style="font-size: 1.2em; color: #555;">(${description})</span>
+  `;
+}
+
 
     function calcMDRD() {
       const age = parseFloat(document.getElementById("mdrd-age").value);
