--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ function showGFR(gfr) {
     <span style="font-size: 1.8em;">GFR = ${gfr.toFixed(1)}</span>
     <span style="font-size: 1em;">ml/min/1.73m²</span><br>
     <span style="font-size: 1.5em;">${title}</span><br>
-    <span style="font-size: 1.2em; color: #555;">(${description})</span>
+    <span style="font-size: 1.2em; color: white;">(${description})</span>
   `;
 }
 
