--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@ h1, h2, h3, h4, h5, h6, p, span, div, label, input, button {
       src: url('BMitra.ttf') format('truetype');
     }
 
+    @font-face {
+  font-family: 'IRANYekan';
+  src: url('IRANYekan.ttf') format('truetype');
+}
+
+    
     body {
       background-color: #000;
       color: #FFD700;
