--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ h1, h2, h3, h4, h5, h6, p, span, div, label, input, button {
 
     
     body {
-      background-color: #000;
-      color: #FFD700;
+      background-color: #fff;
+      color: #4A148C;
       font-family: "BMitra", sans-serif;
       direction: rtl;
       margin: 0;
@@ -59,6 +59,8 @@ h1, h2, h3, h4, h5, h6, p, span, div, label, input, button {
     h2 {
       text-align: center;
       font-size: 1.5em;
+      font-family: 'IRANYekan', sans-serif;
+      color: #6A1B9A;
     }
 
     .tab {
@@ -104,6 +106,8 @@ h1, h2, h3, h4, h5, h6, p, span, div, label, input, button {
       display: block;
       margin-top: 15px;
       font-size: 1em;
+      font-family: 'IRANYekan', sans-serif;
+      color: #6A1B9A;
     }
 
     input, select {
@@ -112,31 +116,51 @@ h1, h2, h3, h4, h5, h6, p, span, div, label, input, button {
       margin-top: 5px;
       font-size: 1em;
       border-radius: 5px;
-      border: 1px solid #FFD700;
-      background-color: #111;
-      color: #FFD700;
+      border: 1px solid #BA68C8;
+      background-color: #f3e5f5;
+      color: #4A148C;
+      font-family: 'IRANYekan', sans-serif;
     }
 
     button.calc {
       width: 100%;
-      padding: 12px;
-      margin-top: 20px;
-      background: #FFD700;
-      color: #000;
-      border: none;
-      border-radius: 10px;
-      font-weight: bold;
-      font-size: 1.1em;
-      cursor: pointer;
+  padding: 12px;
+  margin-top: 20px;
+  background: #AB47BC;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+  font-size: 1.1em;
+  cursor: pointer;
+  font-family: 'IRANYekan', sans-serif;
     }
+    
+.tab button {
+  background-color: #E1BEE7;
+  color: #4A148C;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+  font-size: 1em;
+  font-family: 'IRANYekan', sans-serif;
+}
 
+.tab button.active {
+  background-color: #6A1B9A;
+  color: #fff;
+}
     .result {
       margin-top: 20px;
-      font-size: 1.4em;
-      font-weight: bold;
-      padding: 10px;
-      border-radius: 10px;
-      text-align: center;
+  font-size: 1.4em;
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 10px;
+  text-align: center;
+  color: white;
+  background-color: #6A1B9A;
+  font-family: 'IRANYekan', sans-serif;
     }
 
     .stage-1 { background-color: #4caf50; color: white; }
