--- a/index.html
+++ b/index.html
@@ -178,6 +178,13 @@ h1, h2, h3, h4, h5, h6, p, span, div, label, input, button {
         .catch(err => console.error("SW registration failed:", err));
     }
   </script>
+<!-- آیکن منو -->
+<div class="menu-wrapper">
+  <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
+  <div id="dropdown" class="dropdown-content">
+    <a href="bmi.html">محاسبه BMI</a>
+  </div>
+</div>
 
   <div class="container">
     <h2>فرمول محاسبه GFR:</h2>
