--- a/index.html
+++ b/index.html
@@ -168,6 +168,47 @@ h1, h2, h3, h4, h5, h6, p, span, div, label, input, button {
     .stage-3 { background-color: #ffeb3b; color: black; }
     .stage-4 { background-color: #ff9800; color: black; }
     .stage-5 { background-color: #f44336; color: white; }
+
+    .menu-wrapper {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  z-index: 1000;
+}
+
+.hamburger {
+  font-size: 2em;
+  cursor: pointer;
+  color: #6A1B9A;
+  user-select: none;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 40px;
+  right: 0;
+  background-color: #f3e5f5;
+  min-width: 160px;
+  box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+  border-radius: 10px;
+  overflow: hidden;
+  z-index: 1001;
+}
+
+.dropdown-content a {
+  color: #4A148C;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  font-family: 'IRANYekan', sans-serif;
+  font-size: 0.9em;
+}
+
+.dropdown-content a:hover {
+  background-color: #e1bee7;
+}
+
   </style>
 </head>
 <body>
