--- a/index.html
+++ b/index.html
@@ -264,6 +264,11 @@
     </div>
 
     <div class="result" id="result" style="display:none;"></div>
+    <div class="drawer" id="drawer">
+  <a href="bmi.html">📏 محاسبه BMI</a>
+  <a href="gfr.html">🧪 محاسبه GFR</a>
+</div>
+
   </div>
 
   <script>
