--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
   <a href="bmi.html">📏 محاسبه BMI</a>
   <a href="gfr.html">🧪 محاسبه GFR</a>
 </div>
+    <div class="hamburger" onclick="toggleDrawer()" aria-label="باز کردن منو">☰</div>
 
   </div>
 
