--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     html { font-size: 26px; }
     @media (max-width: 600px) { html { font-size: 22px; } }
     @media (min-width: 601px) { html { font-size: 28px; } }
+    @media (max-width: 600px) {
+  .menu-label {
+    display: none;
+  }
+}
+
 
     @font-face {
       font-family: 'BMitra';
@@ -192,6 +198,13 @@
     .overlay.show {
       display: block;
     }
+    .menu-label {
+  font-family: 'IRANYekan', sans-serif;
+  font-size: 0.9em;
+  margin-right: 8px;
+  vertical-align: middle;
+}
+
   </style>
 </head>
 <body>
@@ -211,11 +224,10 @@
   </script>
 
   <!-- 🔥 منوی کشویی مدرن -->
-  <div class="hamburger" onclick="toggleDrawer()">☰</div>
-  <div class="drawer" id="drawer">
-    <a href="bmi.html">محاسبه BMI</a>
-    <!-- می‌تونی گزینه‌های دیگه هم اضافه کنی -->
-  </div>
+  <div class="hamburger" onclick="toggleDrawer()">
+  ☰ <span class="menu-label">منو</span>
+</div>
+
   <div class="overlay" id="overlay" onclick="toggleDrawer()"></div>
 
   <div class="container">
