--- a/index.html
+++ b/index.html
@@ -2,26 +2,11 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>محاسبه GFR</title>
-  <link rel="manifest" href="manifest.json" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>نرم‌افزار محاسبات پزشکی</title>
+  <link rel="manifest" href="manifest.json"/>
 
   <style>
-    html { font-size: 26px; }
-    @media (max-width: 600px) { html { font-size: 22px; } }
-    @media (min-width: 601px) { html { font-size: 28px; } }
-    @media (max-width: 600px) {
-.menu-label {
-  font-family: 'IRANYekan', sans-serif;
-  font-size: 0.9em;
-  margin-right: 8px;
-  vertical-align: middle;
-  display: none; /* 👈 اضافه شود */
-}
-
-}
-
-
     @font-face {
       font-family: 'BMitra';
       src: url('BMitra.ttf') format('truetype');
@@ -33,374 +18,61 @@
     }
 
     body {
-      background-color: #fff;
-      color: #4A148C;
-      font-family: 'BMitra', sans-serif;
-      direction: rtl;
       margin: 0;
       padding: 0;
-      overflow-x: hidden;
-    }
-
-    .container {
-      max-width: 600px;
-      margin: auto;
-      padding: 20px;
-    }
-
-    h2 {
-      text-align: center;
-      font-size: 1.5em;
+      background-color: #f3e5f5;
       font-family: 'IRANYekan', sans-serif;
-      color: #6A1B9A;
-    }
-
-    .tab {
+      direction: rtl;
+      text-align: center;
+      color: #4A148C;
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: column;
       justify-content: center;
-      gap: 10px;
-      margin: 20px 0;
-    }
-
-    .tab button {
-      background-color: #E1BEE7;
-      color: #4A148C;
-      padding: 10px 20px;
-      border: none;
-      cursor: pointer;
-      border-radius: 10px;
-      font-size: 1em;
-      font-family: 'IRANYekan', sans-serif;
-    }
-
-    .tab button.active {
-      background-color: #6A1B9A;
-      color: #fff;
-    }
-
-    .description {
-      text-align: center;
-      font-size: 1.1em;
-      margin-bottom: 20px;
-    }
-
-    .form-section {
-      display: none;
-      border-top: 1px solid #FFD700;
-      padding-top: 15px;
-    }
-
-    .form-section.active {
-      display: block;
-    }
-
-    label {
-      display: block;
-      margin-top: 15px;
-      font-size: 1em;
-      font-family: 'IRANYekan', sans-serif;
-      color: #6A1B9A;
-    }
-
-    input, select {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      font-size: 1em;
-      border-radius: 5px;
-      border: 1px solid #BA68C8;
-      background-color: #f3e5f5;
-      color: #4A148C;
-      font-family: 'IRANYekan', sans-serif;
-    }
-
-    button.calc {
-      width: 100%;
-      padding: 12px;
-      margin-top: 20px;
-      background: #AB47BC;
-      color: #fff;
-      border: none;
-      border-radius: 10px;
-      font-weight: bold;
-      font-size: 1.1em;
-      cursor: pointer;
-      font-family: 'IRANYekan', sans-serif;
-    }
-
-    .result {
-      margin-top: 20px;
-      font-size: 1.4em;
-      font-weight: bold;
-      padding: 10px;
-      border-radius: 10px;
-      text-align: center;
-      color: white;
-      background-color: #6A1B9A;
-      font-family: 'IRANYekan', sans-serif;
-    }
-
-    .stage-1 { background-color: #4caf50; }
-    .stage-2 { background-color: #8bc34a; color: black; }
-    .stage-3 { background-color: #ffeb3b; color: black; }
-    .stage-4 { background-color: #ff9800; color: black; }
-    .stage-5 { background-color: #f44336; }
-
-    /* 🔥 Drawer-style menu */
-    .drawer {
-      position: fixed;
-      top: 0;
-      right: -250px;
-      width: 250px;
-      height: 100%;
-      background-color: #f3e5f5;
-      box-shadow: -3px 0 10px rgba(0,0,0,0.2);
-      transition: right 0.3s ease-in-out;
-      padding-top: 60px;
-      z-index: 9999;
-    }
-
-    .drawer.open {
-      right: 0;
-    }
-
-    .drawer a {
-      display: block;
-      padding: 15px 20px;
-      text-decoration: none;
-      color: #4A148C;
-      font-family: 'IRANYekan', sans-serif;
-      font-size: 1em;
-    }
-
-    .drawer a:hover {
-      background-color: #e1bee7;
-    }
-
-    .hamburger {
-      position: fixed;
-      top: 15px;
-      right: 20px;
-      font-size: 2em;
-      cursor: pointer;
-      z-index: 10000;
-      color: #6A1B9A;
-      user-select: none;
-    }
-
-    .overlay {
-      display: none;
-      position: fixed;
-      top: 0;
-      right: 0;
-      width: 100vw;
       height: 100vh;
-      background: rgba(0,0,0,0.3);
-      z-index: 9998;
     }
 
-    .overlay.show {
-      display: block;
+    h1 {
+      font-size: 2em;
+      margin-bottom: 40px;
     }
-    .menu-label {
-  font-family: 'IRANYekan', sans-serif;
-  font-size: 0.9em;
-  margin-right: 8px;
-  vertical-align: middle;
-}
 
+    .buttons {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      align-items: center;
+    }
+
+    .buttons a {
+      background-color: #AB47BC;
+      color: white;
+      text-decoration: none;
+      padding: 15px 30px;
+      font-size: 1.2em;
+      border-radius: 10px;
+      transition: background-color 0.3s ease;
+      width: 200px;
+    }
+
+    .buttons a:hover {
+      background-color: #8E24AA;
+    }
   </style>
 </head>
 <body>
-  <script>
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("service-worker.js")
-        .then(() => console.log("Service Worker Registered"))
-        .catch(err => console.error("SW registration failed:", err));
-    }
-  </script>
-  <script>
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("service-worker.js")
-        .then(() => console.log("Service Worker Registered"))
-        .catch(err => console.error("SW registration failed:", err));
-    }
-  </script>
+  <h1>نرم‌افزار محاسبات پزشکی و آزمایشگاه</h1>
 
-  <!-- 🔥 منوی کشویی مدرن -->
-  <div class="hamburger" onclick="toggleDrawer()">
-  ☰ <span class="menu-label" id="menuLabel">منو</span>
-</div>
-
-
-  <div class="overlay" id="overlay" onclick="toggleDrawer()"></div>
-
-  <div class="container">
-    <h2>فرمول محاسبه GFR:</h2>
-
-    <div class="tab">
-      <button onclick="selectFormula('mdrd')" id="btn-mdrd">MDRD</button>
-      <button onclick="selectFormula('ckd')" id="btn-ckd">CKD-EPI</button>
-      <button onclick="selectFormula('cg')" id="btn-cg">Cockcroft-Gault</button>
-      <button onclick="selectFormula('schwartz')" id="btn-schwartz">Schwartz</button>
-    </div>
-
-    <div class="description" id="desc"></div>
-
-    <!-- فرم‌ها -->
-    <div id="form-mdrd" class="form-section">
-      <label>سن (سال):</label><input type="number" id="mdrd-age">
-      <label>جنسیت:</label>
-      <select id="mdrd-gender"><option value="male">مرد</option><option value="female">زن</option></select>
-      <label>کراتینین سرم (mg/dL):</label><input type="number" step="0.01" id="mdrd-creatinine">
-      <button class="calc" onclick="calcMDRD()">محاسبه</button>
-    </div>
-
-    <div id="form-ckd" class="form-section">
-      <label>سن (سال):</label><input type="number" id="ckd-age">
-      <label>جنسیت:</label>
-      <select id="ckd-gender"><option value="male">مرد</option><option value="female">زن</option></select>
-      <label>کراتینین سرم (mg/dL):</label><input type="number" step="0.01" id="ckd-creatinine">
-      <button class="calc" onclick="calcCKD()">محاسبه</button>
-    </div>
-
-    <div id="form-cg" class="form-section">
-      <label>سن (سال):</label><input type="number" id="cg-age">
-      <label>وزن (کیلوگرم):</label><input type="number" id="cg-weight">
-      <label>جنسیت:</label>
-      <select id="cg-gender"><option value="male">مرد</option><option value="female">زن</option></select>
-      <label>کراتینین سرم (mg/dL):</label><input type="number" step="0.01" id="cg-creatinine">
-      <button class="calc" onclick="calcCG()">محاسبه</button>
-    </div>
-
-    <div id="form-schwartz" class="form-section">
-      <label>سن (سال):</label><input type="number" id="schwartz-age">
-      <label>قد (سانتی‌متر):</label><input type="number" id="schwartz-height">
-      <label>کراتینین سرم (mg/dL):</label><input type="number" step="0.01" id="schwartz-creatinine">
-      <button class="calc" onclick="calcSchwartz()">محاسبه</button>
-    </div>
-
-    <div class="result" id="result" style="display:none;"></div>
-    <div class="drawer" id="drawer">
-  <a href="bmi.html">📏 محاسبه BMI</a>
-  <a href="gfr.html">🧪 محاسبه GFR</a>
-</div>
-    <div class="hamburger" onclick="toggleDrawer()" aria-label="باز کردن منو">☰</div>
-
+  <div class="buttons">
+    <a href="bmi.html">📏 محاسبه BMI</a>
+    <a href="gfr.html">🧪 محاسبه GFR</a>
   </div>
 
   <script>
-    const descriptions = {
-      mdrd: "MDRD: برای بیماران CKD کاربرد دارد.",
-      ckd: "CKD-EPI: دقیق و بدون نیاز به وزن بیمار.",
-      cg: "Cockcroft-Gault: با استفاده از وزن و سن.",
-      schwartz: "Schwartz: مناسب برای کودکان."
-    };
-
-    function selectFormula(formula) {
-      document.querySelectorAll(".tab button").forEach(btn => btn.classList.remove("active"));
-      document.getElementById(`btn-${formula}`).classList.add("active");
-      document.getElementById("desc").innerText = descriptions[formula];
-      document.querySelectorAll(".form-section").forEach(section => section.classList.remove("active"));
-      document.getElementById(`form-${formula}`).classList.add("active");
-      document.getElementById("result").style.display = "none";
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("service-worker.js")
+        .then(() => console.log("Service Worker Registered"))
+        .catch(err => console.error("SW registration failed:", err));
     }
-
-    function showGFR(gfr) {
-      const stage = gfr >= 90 ? 1 : gfr >= 60 ? 2 : gfr >= 30 ? 3 : gfr >= 15 ? 4 : 5;
-      const stageTexts = [
-        "مرحله 5 (نارسایی شدید کلیه)",
-        "مرحله 4 (افت شدید عملکرد کلیه)",
-        "مرحله 3 (افت متوسط عملکرد کلیه)",
-        "مرحله 2 (افت خفیف عملکرد کلیه)",
-        "مرحله 1 (عملکرد طبیعی کلیه)"
-      ];
-      const resDiv = document.getElementById("result");
-      resDiv.className = `result stage-${stage}`;
-      resDiv.style.display = "block";
-      resDiv.innerHTML = `
-        <span style="font-size: 1.8em;">GFR = ${gfr.toFixed(1)}</span> 
-        <span style="font-size: 1em;">ml/min/1.73m²</span><br>
-        <span style="font-family: 'IRANYekan', sans-serif; font-size: 1.1em;">${stageTexts[5 - stage]}</span>
-      `;
-    }
-
-    function calcMDRD() {
-      const age = +document.getElementById("mdrd-age").value;
-      const gender = document.getElementById("mdrd-gender").value;
-      const cr = +document.getElementById("mdrd-creatinine").value;
-      if (!age || !cr) return;
-      let gfr = 175 * Math.pow(cr, -1.154) * Math.pow(age, -0.203);
-      if (gender === "female") gfr *= 0.742;
-      showGFR(gfr);
-    }
-
-    function calcCKD() {
-      const age = +document.getElementById("ckd-age").value;
-      const gender = document.getElementById("ckd-gender").value;
-      const cr = +document.getElementById("ckd-creatinine").value;
-      if (!age || !cr) return;
-      const k = gender === "female" ? 0.7 : 0.9;
-      const alpha = gender === "female" ? -0.241 : -0.302;
-      const minVal = Math.min(cr / k, 1);
-      const maxVal = Math.max(cr / k, 1);
-      let gfr = 142 * Math.pow(minVal, alpha) * Math.pow(maxVal, -1.2) * Math.pow(0.9938, age);
-      if (gender === "female") gfr *= 1.012;
-      showGFR(gfr);
-    }
-
-    function calcCG() {
-      const age = +document.getElementById("cg-age").value;
-      const weight = +document.getElementById("cg-weight").value;
-      const gender = document.getElementById("cg-gender").value;
-      const cr = +document.getElementById("cg-creatinine").value;
-      if (!age || !weight || !cr) return;
-      let gfr = ((140 - age) * weight) / (72 * cr);
-      if (gender === "female") gfr *= 0.85;
-      showGFR(gfr);
-    }
-
-    function calcSchwartz() {
-      const height = +document.getElementById("schwartz-height").value;
-      const cr = +document.getElementById("schwartz-creatinine").value;
-      if (!height || !cr) return;
-      let gfr = (0.413 * height) / cr;
-      showGFR(gfr);
-    }
-
-    function toggleMenu() {
-      const dropdown = document.getElementById("dropdown");
-      dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
-    }
-
-    document.addEventListener("click", function(event) {
-      const dropdown = document.getElementById("dropdown");
-      const hamburger = document.querySelector(".hamburger");
-      if (!dropdown.contains(event.target) && !hamburger.contains(event.target)) {
-        dropdown.style.display = "none";
-      }
-    });
-
-    function toggleDrawer() {
-  const drawer = document.getElementById('drawer');
-  const overlay = document.getElementById('overlay');
-  const menuLabel = document.getElementById('menuLabel');
-
-  const isOpen = drawer.classList.contains('open');
-  
-  drawer.classList.toggle('open');
-  overlay.classList.toggle('show');
-
-  if (isOpen) {
-    menuLabel.style.display = 'none';
-  } else {
-    menuLabel.style.display = 'inline';
-  }
-}
-
-  
-    window.onload = () => selectFormula('ckd');
   </script>
 </body>
 </html>
