--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
   <a href="index.html">🏠 صفحه اصلی</a>
   <a href="bmi.html">📏 محاسبه BMI</a>
   <a href="gfr.html">🧪 محاسبه GFR</a>
+  <a href="blood-test.html">🔬 بررسی آزمایش خون</a>
+
 </div>
 
   <h1>نرم‌افزار محاسبات پزشکی و آزمایشگاه</h1>
@@ -142,6 +144,8 @@
   <div class="buttons">
     <a href="bmi.html">📏 محاسبه BMI</a>
     <a href="gfr.html">🧪 محاسبه GFR</a>
+    <a href="blood-test.html">🔬 بررسی آزمایش خون</a>
+
   </div>
 
   <script>
